# unnamed

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py  tox.ini
requirements/: base.txt  dev.txt
scripts/: bootstrap.sh
scripts/_bootstrap/: pre-commit.sh  pyenv.sh  requirements.sh  tool.sh  upgrade-pip.sh  vulkan.sh
src/unnamed/: main.py  meta.py  settings.py
src/unnamed/logging/: logger.py  wrappers.py
